test/invalid_whitespace.spt
R"*(
< HTML>
  <DIV> 
    Halloo
  </DIV>
  
  <DIV> 
    Guten tag
  </DIV >
  <IMG/>
  <IMG/>
  <P> 
    Hi
  </P>
</HTML>  
)*"_html; 